--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
+    "scss-react": "^1.1.1",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
   },
@@ -40,5 +41,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "sass": "^1.57.1",
+    "typescript-plugin-css-modules": "^4.1.1"
   }
 }
