--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@types/react-dom": "^18.0.10",
     "@types/react-redux": "^7.1.25",
     "axios": "^1.3.3",
+    "bootstrap": "^5.2.3",
     "framer-motion": "^9.0.4",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.1",
     "react-redux": "^8.0.5",
